fixed the segment pin appearance on ios

--- a/src/pages/Spinner/spinner.module.scss
+++ b/src/pages/Spinner/spinner.module.scss
@@ -38,9 +38,20 @@
     }
 }
 
-.accordionContent {
+.container {
     --padding-end: 24px;
     --padding-start: 24px;
+
+    div {
+        &:first-of-type {
+            div{
+                &:last-of-type {
+                    // solved the issue with the segment pin appearance on ios 
+                    -webkit-overflow-scrolling: auto !important;
+                }
+            }
+        }
+    }
 }
 
 .spinSuccessModal {
